crates/analyzer/tests/snapshots/errors__init_call_on_self.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"
---
error: `__init__()` is not directly callable
  ┌─ compile_errors/init_call_on_self.fe:5:14
  │
5 │         self.__init__()
  │              ^^^^^^^^
  │
  = Note: `__init__` is the constructor function, and can't be called at runtime.


